# kitchensink

./: .gitignore  LICENSE
convert-gpt/: MemberController.java  convert-gpt.py  pyproject.toml
kitchensink-jboss/: Dockerfile  pom.xml  standalone.xml
kitchensink-jboss/src/main/java/org/jboss/as/quickstarts/kitchensink/model/: Member.java
kitchensink-jboss/src/main/resources/: import.sql  standalone.xml
kitchensink-spring/: Dockerfile  README.md  pom.xml
kitchensink-spring/src/main/java/org/jboss/as/quickstarts/kitchensink/: KitchenSinkApp.java
kitchensink-spring/src/main/java/org/jboss/as/quickstarts/kitchensink/config/: MongoConfig.java
kitchensink-spring/src/main/java/org/jboss/as/quickstarts/kitchensink/controller/: MemberController.java
kitchensink-spring/src/main/java/org/jboss/as/quickstarts/kitchensink/controllers/: MemberController.java  MemberRestController.java
kitchensink-spring/src/main/java/org/jboss/as/quickstarts/kitchensink/exceptions/: GlobalExceptionHandler.java  ResourceNotFoundException.java
kitchensink-spring/src/main/resources/: application.properties
kitchensink-spring/src/main/resources/templates/: dashboard.html  member-detail.html  member-form.html
kitchensink-spring/src/test/java/resources/: application.properties
presentation/: .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
presentation/src/: app.html  mongo-theme.css
presentation/src/lib/deck/: slides.svelte
presentation/src/routes/: +page.svelte  +page.ts
(+13 files in other folders)
